--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,3 +72,41 @@ body {
 		top: 50%;
   	}
 /* ------------------ */
+
+/* Survey Modal */
+#modal {
+	background:rgba(0,0,0,0.6);
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto; /* enable scrolling if needed */
+	display: none;
+}
+#modal-content {
+	background-color: #EEEEEE;
+	margin-top: 7%; /* 10% from the top */
+	margin-left: 12.5%;
+  	border: 1px solid #888;
+	width: 1000px;
+	height: 600px;
+	overflow-y: auto;
+	text-align: left;
+	padding-left: 20px;
+	font: 18px/24px Inconsolata, Arial;
+}
+
+#survey-close-btn {
+	float: right;
+	padding: 5px;
+}
+#survey-close-btn:active {
+	transform: translateY(0px);
+  }
+#survey-submit-btn {
+	padding: 5px;
+	margin-left: 45%;
+	margin-bottom: 5px;
+}
