--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,8 +30,7 @@ body {
 }
 #captcha-image {
     height: 500px;
-	padding-top: 0px;
-	padding-bottom: 0;
+	padding: 5px;
 	width: 800px;
 	display: block;
 	margin-left: auto;
