--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,25 +53,6 @@ body {
 	transform: translateY(4px);
   }
 
-/* Recoding Mouse Movements*/
-	div.cursor {
-		position: absolute;
-		width: 32px;
-		top: -100%;
-		height: 32px;
-		background-image: url(http://cursor.in/assets/cursor.svg);
-  	}
-  
-  	div.obstacle {
-		width: 10px;
-		height: 10px;
-		background: red;
-		left: 50%;
-		position: absolute;
-		top: 50%;
-  	}
-/* ------------------ */
-
 /* Survey Modal */
 #modal {
 	background:rgba(0,0,0,0.6);
@@ -84,39 +65,26 @@ body {
 	overflow: auto; /* enable scrolling if needed */
 	display: none;
 }
-
 #modal-content {
 	margin-left: 21%;
 }
-
-.modal-header {
-	background-color: #D3D3D3;
-	width: 980px;
-	height: 31px;
-	text-align: center;
-	font: 24px Inconsolata, Arial;
-	font-weight: bold;
+#modal > #survey-close-btn {
+	bottom: -1960px;
+	margin-left: 48%; 
+	position: absolute;
 }
-#surveyContainer {
-	margin-left: 20px;
+#modal > #survey-thankyou {
+	bottom: -1930px;
+	margin-left: 40%; 
+	position: absolute;
+	background-color: #4D94FF;
+	border: none;
+	color: #FFFFFF;
+	font: 18px Inconsolata, Arial;
 }
-.survey-image {
-	height: 120px;
-	padding-top: 0px;
-	padding-bottom: 0;
-	width: 170px;
-}
-#survey-close-btn {
-	z-index: 0;
-	margin-left:45%;
-	margin-bottom: 10px;
-	padding: 5px;
-}
-#survey-close-btn:active {
-	transform: translateY(0px);
-  }
-#survey-submit-btn {
-	padding: 5px;
-	margin-left: 45%;
-	margin-bottom: 5px;
+#modal > #survey-X-btn {
+	margin-left: 72.7%;
+	padding-right: 5px;
+	padding-left: 5px; 
+	position: absolute;
 }
